1. Collection API Улучшения[#118401]